feat:Complete admin panel overhaul with improved UX and auth error handling